@@ -433,7 +433,7 @@ public class SmoothNodes3D
 		new SmoothNodes3D(mesh, opts).compute();			
 		try
 		{
-			MeshWriter.writeObject3D(mesh, args[argc+1], "dummy.brep");
+			MeshWriter.writeObject3D(mesh, args[argc+1], null);
 		}
 		catch (IOException ex)
 		{
